--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
       <p>©2025 Jal Wala | All Rights Reserved</p>
   </div>
 </footer>
-
+<div>
+  <p>
+    hii
+  </p>
+</div>
       </body>
 </html>
