--- a/feedback.html
+++ b/feedback.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <h2>Get in touch</h2>
-      <p>Feel free to contact me about anything providing water services </p>
+      <p>Feel free to contact us about anything and anytime related to providing water services </p>
       <form class="contact-form" method="post" action="insertfeedback.php">
         <div class="input-area">
           <input type="text" placeholder="Your name"  name="name"/>
