--- a/registration.html
+++ b/registration.html
@@ -72,14 +72,14 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label>Select Service</label>
                             <div class="button-group three-cols">
                                 <button type="button" class="btn-toggle active" data-value="basic">Water Bottles</button>
                                 <button type="button" class="btn-toggle" data-value="standard">Water Campers</button>
                                 <button type="button" class="btn-toggle" data-value="premium">Water Tankers</button>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="form-actions">
                             <button type="button" class="btn-secondary">Cancel</button>
