--- a/sing.html
+++ b/sing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 <body>
     <div class="container" id="container">
         <div class="form-container sign-up-container">
-            <form action="#">
+            <form action="registration.php" method="post">
                 <h1>Create Account</h1>
                 <div class="social-container">
                     <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -23,11 +23,12 @@
                 <input type="email" name="email" placeholder="Enter your email" required>
                 <input type="tel" name="phone" placeholder="Enter your phone number" required>
                 <input type="text" name="address" placeholder="Enter your address" required>
-                <button>Sign Up</button>
+                <input type="text" name="password" placeholder="Enter your password" required>
+                <button name="submit" value="btn">Sign Up</button>
             </form>
         </div>
         <div class="form-container sign-in-container">
-            <form action="#">
+            <form action="login.php">
                 <h1>Sign in</h1>
                 <div class="social-container">
                     <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -35,7 +36,6 @@
                     <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your account</span>
-                <input type="email" placeholder="Email" />
                 <input type="email" placeholder="Email" name="email" />
                 <input type="password" placeholder="Password"  name="password"/>
                 <a href="#">Forgot your password?</a>
