regristration page link are set
 i am set the link of regirstration page in the index page of our project

Co-Authored-By: RAMBABU DHAKAD <167631212+ramdhakad01@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li><a class="ico" href="#">About Us</a></li>
       <li><a class="ico" href="feedback.html">Feedback</a></li>
       <li><a class="ico" href="sing.html">Login </a></li>
-      <li><a class="ico" href="registration.html">Register</a></li>
+      <li><a class="ico" href="sing.html">Register</a></li>
     </ul>
 
     <i class="uil uil-search search-icon" id="searchIcon"></i>
